# wpe-vue

./: app.py  config.py  devcontainer(1).json  docker-compose(1).yml  package-lock.json  package.json  pyproject.toml  readme.md
.devcontainer/: Dockerfile
sql_queries/: Container database.session.sql
utilities/: cn_calculations.ipynb  cn_to_db.py  models_db copy.py  models_db.py  polygons_from_watershed_id.py  random_hrus_generator.py
wpe/: README.md  package-lock.json  package.json  vite.config.js
wpe/src/: App.vue  main.js
wpe/src/assets/: L.switchBasemap.css
wpe/src/components/: Auth.vue  Explorer.vue  Home.vue  Hru.vue  Index.vue  Login.vue  Lulc.vue  Map.vue  Navigation.vue  Ping.vue  Register.vue  Watershed.vue  Zone.vue
wpe/src/router/: index.js
wpe/src/stores/: auth.js  drawStore.js  stage.js
wpe/src/utils/: switchBasemap.js
