[tool.poetry]
name = "wpe-vue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pandas = "^2.1.4"
geopandas = "^0.14.1"
rasterio = "^1.3.9"
sqlalchemy = "^2.0.23"
geoalchemy2 = "^0.14.2"
flask-sqlalchemy = "^3.1.1"
pycountry = "^23.12.11"
flask-wtf = "^1.2.1"
flask-bcrypt = "^1.0.1"
wtforms = "^3.1.1"
email-validator = "^2.1.0.post1"
bcrypt = "^4.1.2"
flask-login = "^0.6.3"
datetime = "^5.4"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
flask-migrate = "^4.0.5"
shapely = "^2.0.2"
flask-cors = "^4.0.0"
flask-profiler = "^1.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
